# my_python_GPT-telegram_bot

./: .env.example  .gitignore  README.md  pyproject.toml
bot/: config.py  main.py
bot/assets/: __init__.py  prompts  quiz_questions.json
bot/assets/img/: __init__.py
bot/assets/text/: __init__.py  facts.txt  personas.json
bot/handlers/: __init__.py  basic.py  gpt_chat.py  paraphrase.py  quiz.py  random_fact.py  talk.py
bot/services/: __init__.py  openai_service.py  persona_service.py  quiz_service.py
bot/utils/: __init__.py  constants.py  keyboards.py  numwords.py  prompts.py  texts.py
