[tool.poetry]
name = "my-bot"
version = "1.0"
description = "First telegram_gpt_integrated_bot"
authors = ["apostolruslan <apostolruslan.python@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10"
python-telegram-bot = ">=22.1,<23.0"
openai = ">=1.84.0,<2.0.0"
python-dotenv = ">=1.1.0,<2.0.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
